--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,8 +56,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".DiscoveriresActivity"></activity>
-        <activity android:name=".TestingActivity"></activity>
+        <activity android:name=".MainActivity2"></activity>
+        <activity android:name=".RaghHostActivity" />
+        <activity android:name=".DiscoveriresActivity" />
+        <activity android:name=".TestingActivity" />
         <activity android:name=".SecondActivity" />
         <activity android:name=".Findlocation" />
         <activity android:name=".TwoInchPrinterActivity" />
